feature/80: Made validation API functional (#117)
* #80: Made validation API functional