@@ -4,6 +4,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.empty;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.apache.maven.model.Dependency;
@@ -13,7 +14,7 @@ class MavenDependencyComparatorTest {
 
     @Test
     void testAddedDependency() {
-        final List<DependencyChange> report = new MavenDependencyComparator().compare(List.of(),
+        final List<DependencyChange> report = new MavenDependencyComparator().compare(Collections.emptyList(),
                 List.of(buildMyLibDependency("1.0.1")));
         assertThat(report, contains(new NewDependency("com.example", "my-lib", "1.0.1")));
     }
@@ -28,7 +29,7 @@ class MavenDependencyComparatorTest {
     @Test
     void testRemovedDependency() {
         final List<DependencyChange> report = new MavenDependencyComparator()
-                .compare(List.of(buildMyLibDependency("1.0.1")), List.of());
+                .compare(List.of(buildMyLibDependency("1.0.1")), Collections.emptyList());
         assertThat(report, contains(new RemovedDependency("com.example", "my-lib", "1.0.1")));
     }
 
